# q-custom-etl-examples

./: .gitignore  README.md  pyproject.toml
etl/: __init__.py  assets.py  schema.sql
etl/transforms/: custom_transform.py
